--- a/web/index.html
+++ b/web/index.html
@@ -16,20 +16,34 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="My portfolio" content=":)">
+    <meta name="My Portfolio" content=":)">
+    <meta property="og:description" content="Hi, I'm Paul, a 18 yo mobile&web dev and this is my Portfolio website">
+    <meta name="description" content="Hi, I'm Paul, a 18 yo mobile&web dev and this is my Portfolio website">
+
+    <meta name="apple-mobile-web-app-title" content="Paul Caubet || Portfolio">
+    <meta property="og:site_name" content="Paul Caubet || Portfolio" />
+    <meta property="og:title" content="Paul Caubet || Portfolio" />
+    <meta name="title" content="Paul Caubet" />
+
+    <meta name="author" content="Paul Caubet">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="portfolio">
+    <meta name="apple-mobile-web-app-title" content="Paul Caubet || Portfolio">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
     <link rel="stylesheet" href="style.css">
-    <title>Paul Caubet</title>
+    <title>Paul Caubet || Portfolio</title>
     <link rel="manifest" href="manifest.json">
 
 </head>
 
 <body>
+    <div class="info">
+
+       1.0.1
+
+    </div>
     <div id="container">
         <div class="divider" aria-hidden="true"></div>
         <p class="loading-text" aria-label="Loading">
