--- a/web/index.html
+++ b/web/index.html
@@ -17,8 +17,8 @@
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="My Portfolio" content=":)">
-    <meta property="og:description" content="Hi, I'm Paul, a 18 yo mobile&web dev and this is my Portfolio website">
-    <meta name="description" content="Hi, I'm Paul, a 18 yo mobile&web dev and this is my Portfolio website">
+<meta property="og:description" content="Hi, I'm Paul Caubet, a 18 yo Flutter mobile&web german and french dev and this is my Portfolio website">
+    <meta name="description" content="Hi, I'm Paul Caubet, a 18 yo Flutter mobile&web german and french dev and this is my Portfolio website">
 
     <meta name="apple-mobile-web-app-title" content="Paul Caubet || Portfolio">
     <meta property="og:site_name" content="Paul Caubet || Portfolio" />
