--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,3 @@
-
-   
 <!DOCTYPE html>
 <html>
 
@@ -17,8 +15,10 @@
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="My Portfolio" content=":)">
-<meta property="og:description" content="Hi, I'm Paul Caubet, a 18 yo Flutter mobile&web german and french dev and this is my Portfolio website">
-    <meta name="description" content="Hi, I'm Paul Caubet, a 18 yo Flutter mobile&web german and french dev and this is my Portfolio website">
+    <meta property="og:description"
+        content="Hi, I'm Paul Caubet, a 18 yo Flutter mobile&web german and french dev and this is my Portfolio website">
+    <meta name="description"
+        content="Hi, I'm Paul Caubet, a 18 yo Flutter mobile&web german and french dev and this is my Portfolio website">
 
     <meta name="apple-mobile-web-app-title" content="Paul Caubet || Portfolio">
     <meta property="og:site_name" content="Paul Caubet || Portfolio" />
@@ -41,34 +41,31 @@
 <body>
     <div class="info">
 
-       1.0.2
+        1.0.3
 
     </div>
     <div id="container">
-        <div class="divider" aria-hidden="true"></div>
-        <p class="loading-text" aria-label="Loading">
-            <span class="letter" aria-hidden="true">L</span>
-            <span class="letter" aria-hidden="true">o</span>
-            <span class="letter" aria-hidden="true">a</span>
-            <span class="letter" aria-hidden="true">d</span>
-            <span class="letter" aria-hidden="true">i</span>
-            <span class="letter" aria-hidden="true">n</span>
-            <span class="letter" aria-hidden="true">g</span>
-        </p>
+
+        <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
     </div>
-    <!-- iOS 15 WebGL 2.0 fix (https://github.com/flutter/flutter/issues/89655) -->
-    <!-- (your_username): Remove when https://github.com/flutter/engine/pull/29038 will be merged to stable -->
+   
     <script src="https://unpkg.com/platform@1.3.5/platform.js"></script>
     <script type="text/javascript">
         function isIOS() {
             return [
-                    'iPad Simulator',
-                    'iPhone Simulator',
-                    'iPod Simulator',
-                    'iPad',
-                    'iPhone',
-                    'iPod'
-                ].includes(navigator.platform)
+                'iPad Simulator',
+                'iPhone Simulator',
+                'iPod Simulator',
+                'iPad',
+                'iPhone',
+                'iPod'
+            ].includes(navigator.platform)
                 // iPad on iOS 13+ detection
                 ||
                 (navigator.userAgent.includes("Mac") && "ontouchend" in document)
@@ -76,8 +73,8 @@
 
         if (isIOS() && parseInt(platform.os.version.split(".")[0]) >= 15) {
             // iOS/iPadOS 15+
-            HTMLCanvasElement.prototype.getContext = function(orig) {
-                return function(type) {
+            HTMLCanvasElement.prototype.getContext = function (orig) {
+                return function (type) {
                     return type !== "webgl2" ? orig.apply(this, arguments) : null
                 }
             }(HTMLCanvasElement.prototype.getContext)
@@ -103,7 +100,7 @@
 
         if ('serviceWorker' in navigator) {
             // Service workers are supported. Use them.
-            window.addEventListener('load', function() {
+            window.addEventListener('load', function () {
                 // Wait for registration to finish before dropping the <script> tag.
                 // Otherwise, the browser will load the script multiple times,
                 // potentially different versions.
