--- a/web/index.html
+++ b/web/index.html
@@ -46,13 +46,8 @@
     </div>
     <div id="container">
 
-        <div class="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
+        <h1 class="title">Loading</h1>
+        <div class="rainbow-marker-loader"></div>
     </div>
    
     <script src="https://unpkg.com/platform@1.3.5/platform.js"></script>
