--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
     </div>
     <div id="container">
 
-        <h1 class="title">Loading</h1>
+        <h1 class="title">Loading...</h1>
         <div class="rainbow-marker-loader"></div>
     </div>
    
