--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Paul Caubet || Portfolio">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <link rel="icon" href="icons/Icon-192.png">
     <link rel="stylesheet" href="style.css">
     <title>Paul Caubet || Portfolio</title>
     <link rel="manifest" href="manifest.json">
